Sat Dec 12 00:36:14 GMT 2009  Robert Luberda  <robert@debian.org>

	* man/po4a/po/pl.po: Update from Translation Project.

Tue Dec  1 17:01:19 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (do_extern): Pass section through to external program
	  (Savannah bug #28145). Fix passing of alternate system name to use
	  -m rather than -s.

Tue Nov 24 18:27:59 GMT 2009  Robert Luberda  <robert@debian.org>

	* po/pl.po: Update from Translation Project.

Wed Nov 18 14:58:52 GMT 2009  Yuri Kozlov  <yuray@komyakino.ru>

	* man/po4a/po/ru.po: Update from Translation Project.

Wed Nov 18 14:55:31 GMT 2009  Yuri Kozlov  <yuray@komyakino.ru>

	* po/ru.po: Update from Translation Project.

Wed Nov 18 14:52:43 GMT 2009  Erwin Poeze  <erwin.poeze@gmail.com>

	* po/nl.po: Update from Translation Project.

Sun Nov 15 22:49:35 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* README (Non-generic arguments to configure): Use more readable
	  formatting.
	* manual/options-only.me, manual/print-options: New file.
	* manual/intro.me (Arguments to configure): Add hooks for
	  options-only.me.
	* manual/Makefile.am (dist_noinst_DATA): Add options-only.me and
	  print-options.

Sun Nov 15 16:15:56 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Revision control): Savannah has disabled bzr+ssh for
	  the time being; update push URL.

Sun Nov 15 16:05:26 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.7-pre1.
	* po/man-db.pot, po/*.po: Update.

Sun Nov 15 14:30:27 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* NEWS: Document previous change.

Sun Nov 15 14:18:35 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (compare_candidates): Prefer getting a page from the
	  best manual section over getting a page in the correct language; I
	  have my reservations about this, but it seems to be what people
	  are requesting (Debian bug #519547).

Sun Nov 15 14:02:11 GMT 2009  Colin Watson  <cjwatson@debian.org>
