@@ -701,6 +701,8 @@ int main (int argc, char *argv[])
 		}
 	}
 
+	init_debug ();
+
 	/* initialise the locale */
 	if (!setlocale (LC_ALL, "") && !getenv ("MAN_NO_LOCALE_WARNING"))
 		/* Obviously can't translate this. */
