@@ -35,6 +35,11 @@ Major changes since man-db 2.5.6:
 	o By request, man now prefers getting a page from the best manual
 	  section over getting a page in the correct language.
 
+	o All programs now support a MAN_DEBUG environment variable which
+	  can be used in place of the -d/--debug option. This is useful in
+	  some situations where a program is being called deep in a process
+	  tree.
+
 man-db 2.5.6 (26 August 2009)
 =============================
 
